--- a/FormsPPAI/Dashbord.csproj
+++ b/FormsPPAI/Dashbord.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAccessLayer\EmpleadoAdapter.cs" />
     <Compile Include="DataAccessLayer\EntradaAdapter.cs" />
     <Compile Include="DataAccessLayer\ExposicionAdapter.cs" />
     <Compile Include="DataAccessLayer\ObraAdapter.cs" />
@@ -77,6 +78,11 @@
     <Compile Include="DataAccessLayer\GeneralAdapter.cs" />
     <Compile Include="DataAccessLayer\TiposVisitasAdapter.cs" />
     <Compile Include="DataAccessLayer\UsuarioAdapter.cs" />
+    <Compile Include="DSIDataSetDefinitivo.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DSIDataSetDefinitivo.xsd</DependentUpon>
+    </Compile>
     <Compile Include="Entity\Empleado.cs" />
     <Compile Include="Entity\Entrada.cs" />
     <Compile Include="Entity\Exposicion.cs" />
@@ -106,6 +112,12 @@
     </Compile>
     <Compile Include="Forms\ElegirEntradas.Designer.cs">
       <DependentUpon>ElegirEntradas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\InformeEntrada.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\InformeEntrada.Designer.cs">
+      <DependentUpon>InformeEntrada.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\OpcionesRV.cs">
       <SubType>Form</SubType>
@@ -143,6 +155,9 @@
     <EmbeddedResource Include="Forms\ElegirTarifa.resx">
       <DependentUpon>ElegirTarifa.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\InformeEntrada.resx">
+      <DependentUpon>InformeEntrada.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\OpcionesRV.resx">
       <DependentUpon>OpcionesRV.cs</DependentUpon>
     </EmbeddedResource>
@@ -164,6 +179,18 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Reporte\ReportEntrada.rdlc" />
+    <None Include="DSIDataSetDefinitivo.xsc">
+      <DependentUpon>DSIDataSetDefinitivo.xsd</DependentUpon>
+    </None>
+    <None Include="DSIDataSetDefinitivo.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DSIDataSetDefinitivo.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="DSIDataSetDefinitivo.xss">
+      <DependentUpon>DSIDataSetDefinitivo.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
