primer commit 3ra

--- a/FormsPPAI/App.config
+++ b/FormsPPAI/App.config
@@ -4,15 +4,16 @@
  </configSections>
  <connectionStrings>
   <add name="Dashbord.Properties.Settings.DSIConnectionString"
-   connectionString="Data Source=192.168.0.108, 1433;Initial Catalog=DSI;Persist Security Info=True;User ID=sa;Password=XgLNhiP7Xf"
+   connectionString="Data Source=LAPTOP-CC69KGV1\SQLEXPRESS;Initial Catalog=DSI;Integrated Security=True"
    providerName="System.Data.SqlClient" />
  </connectionStrings>
  <startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
 	</startup>
 	<appSettings>
-		<add key="ConnectionString" value="Data Source=192.168.0.108, 1433;Initial Catalog=DSI;Persist Security Info=True;User ID=sa;Password=XgLNhiP7Xf"/>
+		<add key="ConnectionString" value="Data Source=LAPTOP-CC69KGV1\SQLEXPRESS;Initial Catalog=DSI;Integrated Security=True"/>
 	</appSettings>
 </configuration>
 
 <!--"Data Source=DESKTOP-LDSHJ6N\SQLEXPRESS;Initial Catalog=DSI;Integrated Security=True"-->
+<!--Data Source=192.168.0.108, 1433;Initial Catalog=DSI;Persist Security Info=True;User ID=sa;Password=XgLNhiP7Xf-->
